Bug 1384395 - Use nsAutoOwningThread for mfbt/WeakPtr.h thread assertions (r=froydnj)

MozReview-Commit-ID: DF4DiffL4Qq